--- a/arquivo.html
+++ b/arquivo.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Sejam bem vindos ao curso de fundamentos de Javascript da Beyond School</h1>
+        <p>Vamos todos ser felizes</p>
     </body>
 </html>
