Nova lista adicionada

--- a/arquivo.html
+++ b/arquivo.html
@@ -7,5 +7,11 @@
     <body>
         <h1>Sejam bem vindos ao curso de fundamentos de Javascript da Beyond School</h1>
         <p>Vamos todos ser felizes</p>
+
+        <ul>
+            <li>Estudar</li>
+            <li>Aprender</li>
+            <li>Ensinar</li>
+        </ul>
     </body>
 </html>
